--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,34 @@
 *.pyc
 *.out
 *.o
+
+#
+# from https://github.com/github/gitignore/blob/master/Global/Eclipse.gitignore
+#
+
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# PDT-specific
+.buildpath
