--- a/.gitignore
+++ b/.gitignore
@@ -3,33 +3,8 @@
 *.out
 *.o
 
-#
-# from https://github.com/github/gitignore/blob/master/Global/Eclipse.gitignore
-#
-
-*.pydevproject
+*.class
+*.classpath
+*.settings
 .project
 .metadata
-bin/**
-tmp/**
-tmp/**/*
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.classpath
-.settings/
-.loadpath
-
-# External tool builders
-.externalToolBuilders/
-
-# Locally stored "Eclipse launch configurations"
-*.launch
-
-# CDT-specific
-.cproject
-
-# PDT-specific
-.buildpath
